--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Serhat Pehlivan, Game Developer</title>
+        <title>Burak Unutmaz, Computer Engineer</title>
         <!-- link to main stylesheet -->
         <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
@@ -16,7 +16,7 @@
         </nav>
         <div class="container">
             <div class="blurb">
-                <h1>What's up, I'm Burak Unutmaz v0.7</h1>
+                <h1>What's up, I'm Burak Unutmaz v0.72</h1>
 
             </div><!-- /.blurb -->
         </div><!-- /.container -->
